add koala customization

--- a/prost-build/Cargo.toml
+++ b/prost-build/Cargo.toml
@@ -17,6 +17,7 @@ default = []
 vendored = []
 # When MSRV moves to 1.60, these can change to dep:
 cleanup-markdown = ["pulldown-cmark", "pulldown-cmark-to-cmark"]
+mrpc = []
 
 [dependencies]
 bytes = { version = "1", default-features = false }
@@ -25,7 +26,7 @@ itertools = "0.10"
 log = "0.4"
 multimap = { version = "0.8", default-features = false }
 petgraph = { version = "0.6", default-features = false }
-prost = { version = "0.10.0", path = "..", default-features = false }
+prost = { version = "0.10.0", path = "..", default-features = false, feature = ["mrpc"] }
 prost-types = { version = "0.10.0", path = "../prost-types", default-features = false }
 tempfile = "3"
 lazy_static = "1.4.0"
