--- a/Cargo.toml
+++ b/Cargo.toml
@@ -44,6 +44,7 @@ bench = false
 default = ["prost-derive", "std"]
 no-recursion-limit = []
 std = []
+mrpc = ["mrpc"]
 
 [dependencies]
 bytes = { version = "1", default-features = false }
@@ -55,6 +56,7 @@ env_logger = { version = "0.8", default-features = false }
 log = "0.4"
 proptest = "1"
 rand = "0.8"
+mrpc = { path = "../koala/src/mrpc" }
 
 [profile.bench]
 debug = true
