encoding for mrpc::Vec<u8>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -44,11 +44,11 @@ bench = false
 default = ["prost-derive", "std"]
 no-recursion-limit = []
 std = []
-mrpc = ["mrpc"]
 
 [dependencies]
 bytes = { version = "1", default-features = false }
 prost-derive = { version = "0.10.0", path = "prost-derive", optional = true }
+mrpc = { path = "../../mrpc", optional = true }
 
 [dev-dependencies]
 criterion = "0.3"
@@ -56,7 +56,6 @@ env_logger = { version = "0.8", default-features = false }
 log = "0.4"
 proptest = "1"
 rand = "0.8"
-mrpc = { path = "../../mrpc" }
 
 [profile.bench]
 debug = true
