--- a/.github/workflows/continuous-integration-workflow.yaml
+++ b/.github/workflows/continuous-integration-workflow.yaml
@@ -7,13 +7,23 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: checkout
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
         with:
           submodules: recursive
+      - name: checkout koala
+        uses: actions/checkout@v3
+        with:
+          repository: koalanet-project/koala
+          ssh-key: ${{ secrets.DEPLOY_KEY_KOALA }}
+          ref: main
+          path: koala
+      - name: replace manifest
+        run: mv .github/workflows/Cargo.toml Cargo.toml
+          | rm koala/Cargo.toml
       - name: install toolchain
         uses: actions-rs/toolchain@v1
         with:
-            toolchain: stable
+            toolchain: stable 
             default: true
             profile: minimal
             components: rustfmt
@@ -27,9 +37,19 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: checkout
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
         with:
           submodules: recursive
+      - name: checkout koala
+        uses: actions/checkout@v3
+        with:
+          repository: koalanet-project/koala
+          ssh-key: ${{ secrets.DEPLOY_KEY_KOALA }}
+          ref: main
+          path: koala
+      - name: replace manifest
+        run: mv .github/workflows/Cargo.toml Cargo.toml
+          | rm koala/Cargo.toml
       - name: install toolchain
         uses: actions-rs/toolchain@v1
         with:
@@ -43,7 +63,6 @@ jobs:
         uses: actions-rs/clippy-check@v1
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
-          args: --workspace --all-features --all-targets
 
   minversions:
     runs-on: ubuntu-latest
@@ -56,9 +75,20 @@ jobs:
         with:
           profile: minimal
           toolchain: stable
-      - uses: actions/checkout@v2
+      - name: checkout
+        uses: actions/checkout@v3
         with:
           submodules: recursive
+      - name: checkout koala
+        uses: actions/checkout@v3
+        with:
+          repository: koalanet-project/koala
+          ssh-key: ${{ secrets.DEPLOY_KEY_KOALA }}
+          ref: main
+          path: koala
+      - name: replace manifest
+        run: mv .github/workflows/Cargo.toml Cargo.toml
+          | rm koala/Cargo.toml
       - name: install ninja
         uses: seanmiddleditch/gha-setup-ninja@v3
       - name: cargo update -Zminimal-versions
@@ -71,7 +101,6 @@ jobs:
         uses: actions-rs/cargo@v1
         with:
           command: check
-          args: --workspace --all-targets
           toolchain: stable
 
   test:
@@ -79,17 +108,24 @@ jobs:
     strategy:
       matrix:
         toolchain:
-          - stable
-          - 1.53.0
+          - nightly 
         os:
           - ubuntu-latest
-          - macos-latest
-          - windows-latest
     steps:
       - name: checkout
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
         with:
           submodules: recursive
+      - name: checkout koala
+        uses: actions/checkout@v3
+        with:
+          repository: koalanet-project/koala
+          ssh-key: ${{ secrets.DEPLOY_KEY_KOALA }}
+          ref: main
+          path: koala
+      - name: replace manifest
+        run: mv .github/workflows/Cargo.toml Cargo.toml
+          | rm koala/Cargo.toml
       - name: install toolchain
         uses: actions-rs/toolchain@v1
         with:
@@ -103,7 +139,6 @@ jobs:
         uses: actions-rs/cargo@v1
         with:
           command: test
-          args: --workspace --all-targets
       - name: test no-default-features
         uses: actions-rs/cargo@v1
         with:
@@ -114,9 +149,19 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: checkout
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
         with:
           submodules: recursive
+      - name: checkout koala
+        uses: actions/checkout@v3
+        with:
+          repository: koalanet-project/koala
+          ssh-key: ${{ secrets.DEPLOY_KEY_KOALA }}
+          ref: main
+          path: koala
+      - name: replace manifest
+        run: mv .github/workflows/Cargo.toml Cargo.toml
+          | rm koala/Cargo.toml
       - name: install toolchain
         uses: actions-rs/toolchain@v1
         with:
@@ -124,6 +169,8 @@ jobs:
             default: true
             profile: minimal
       - uses: Swatinem/rust-cache@v1
+        with:
+          working-directory: koala/src/3rdparty/prost
       - name: install cargo-no-std-check
         uses: actions-rs/cargo@v1
         with:
@@ -154,9 +201,19 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: checkout
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
         with:
           submodules: recursive
+      - name: checkout koala
+        uses: actions/checkout@v3
+        with:
+          repository: koalanet-project/koala
+          ssh-key: ${{ secrets.DEPLOY_KEY_KOALA }}
+          ref: main
+          path: koala
+      - name: replace manifest
+        run: mv .github/workflows/Cargo.toml Cargo.toml
+          | rm koala/Cargo.toml
       - name: install toolchain
         uses: actions-rs/toolchain@v1
         with:
