remove dependency of libkoala

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -49,7 +49,7 @@ mrpc-frontend = ["dep:shm"]
 [dependencies]
 bytes = { version = "1", default-features = false }
 prost-derive = { version = "0.10.0", path = "prost-derive", optional = true }
-shm = { path = "../../shm", optional = true }
+shm = { path = "../../shm", features = ["mrpc"], optional = true }
 
 [dev-dependencies]
 criterion = "0.3"
