--- a/.github/workflows/Cargo.toml
+++ b/.github/workflows/Cargo.toml
@@ -49,7 +49,7 @@ mrpc-frontend = ["dep:mrpc"]
 [dependencies]
 bytes = { version = "1", default-features = false }
 prost-derive = { version = "0.10.0", path = "prost-derive", optional = true }
-mrpc = { path = "koala/src/mrpc", optional = true }
+mrpc = { path = "phoenix/src/mrpc", optional = true }
 
 [dev-dependencies]
 criterion = "0.3"
