--- a/.github/workflows/continuous-integration-workflow.yaml
+++ b/.github/workflows/continuous-integration-workflow.yaml
@@ -10,16 +10,16 @@ jobs:
         uses: actions/checkout@v3
         with:
           submodules: recursive
-      - name: checkout koala
+      - name: checkout phoenix
         uses: actions/checkout@v3
         with:
-          repository: koalanet-project/koala
+          repository: phoenix-dataplane/phoenix
           ssh-key: ${{ secrets.DEPLOY_KEY_PHOENIX }}
           ref: main
-          path: koala
+          path: phoenix
       - name: replace manifest
         run: mv .github/workflows/Cargo.toml Cargo.toml
-          | rm koala/Cargo.toml
+          | rm phoenix/Cargo.toml
       - name: install toolchain
         uses: actions-rs/toolchain@v1
         with:
@@ -40,16 +40,16 @@ jobs:
         uses: actions/checkout@v3
         with:
           submodules: recursive
-      - name: checkout koala
+      - name: checkout phoenix
         uses: actions/checkout@v3
         with:
-          repository: koalanet-project/koala
+          repository: phoenix-dataplane/phoenix
           ssh-key: ${{ secrets.DEPLOY_KEY_PHOENIX }}
           ref: main
-          path: koala
+          path: phoenix
       - name: replace manifest
         run: mv .github/workflows/Cargo.toml Cargo.toml
-          | rm koala/Cargo.toml
+          | rm phoenix/Cargo.toml
       - name: install toolchain
         uses: actions-rs/toolchain@v1
         with:
@@ -79,16 +79,16 @@ jobs:
         uses: actions/checkout@v3
         with:
           submodules: recursive
-      - name: checkout koala
+      - name: checkout phoenix
         uses: actions/checkout@v3
         with:
-          repository: koalanet-project/koala
+          repository: phoenix-dataplane/phoenix
           ssh-key: ${{ secrets.DEPLOY_KEY_PHOENIX }}
           ref: main
-          path: koala
+          path: phoenix
       - name: replace manifest
         run: mv .github/workflows/Cargo.toml Cargo.toml
-          | rm koala/Cargo.toml
+          | rm phoenix/Cargo.toml
       - name: install ninja
         uses: seanmiddleditch/gha-setup-ninja@v3
       - name: cargo update -Zminimal-versions
@@ -116,16 +116,16 @@ jobs:
         uses: actions/checkout@v3
         with:
           submodules: recursive
-      - name: checkout koala
+      - name: checkout phoenix
         uses: actions/checkout@v3
         with:
-          repository: koalanet-project/koala
+          repository: phoenix-dataplane/phoenix
           ssh-key: ${{ secrets.DEPLOY_KEY_PHOENIX }}
           ref: main
-          path: koala
+          path: phoenix
       - name: replace manifest
         run: mv .github/workflows/Cargo.toml Cargo.toml
-          | rm koala/Cargo.toml
+          | rm phoenix/Cargo.toml
       - name: install toolchain
         uses: actions-rs/toolchain@v1
         with:
@@ -152,16 +152,16 @@ jobs:
         uses: actions/checkout@v3
         with:
           submodules: recursive
-      - name: checkout koala
+      - name: checkout phoenix
         uses: actions/checkout@v3
         with:
-          repository: koalanet-project/koala
+          repository: phoenix-dataplane/phoenix
           ssh-key: ${{ secrets.DEPLOY_KEY_PHOENIX }}
           ref: main
-          path: koala
+          path: phoenix
       - name: replace manifest
         run: mv .github/workflows/Cargo.toml Cargo.toml
-          | rm koala/Cargo.toml
+          | rm phoenix/Cargo.toml
       - name: install toolchain
         uses: actions-rs/toolchain@v1
         with:
@@ -170,7 +170,7 @@ jobs:
             profile: minimal
       - uses: Swatinem/rust-cache@v1
         with:
-          working-directory: koala/src/3rdparty/prost
+          working-directory: phoenix/src/3rdparty/prost
       - name: install cargo-no-std-check
         uses: actions-rs/cargo@v1
         with:
@@ -204,16 +204,16 @@ jobs:
         uses: actions/checkout@v3
         with:
           submodules: recursive
-      - name: checkout koala
+      - name: checkout phoenix
         uses: actions/checkout@v3
         with:
-          repository: koalanet-project/koala
+          repository: phoenix-dataplane/phoenix
           ssh-key: ${{ secrets.DEPLOY_KEY_PHOENIX }}
           ref: main
-          path: koala
+          path: phoenix
       - name: replace manifest
         run: mv .github/workflows/Cargo.toml Cargo.toml
-          | rm koala/Cargo.toml
+          | rm phoenix/Cargo.toml
       - name: install toolchain
         uses: actions-rs/toolchain@v1
         with:
