Update patht to shm crate and remove Eq derivation (#2)
* change path of shm crate

* temporarily remove this Eq derivation since floats cannot simply derive Eq

* update Cargo.toml used in CI

* update CI

* update CI

--- a/.github/workflows/Cargo.toml
+++ b/.github/workflows/Cargo.toml
@@ -34,6 +34,8 @@ exclude = [
   # Same counts for the afl fuzz targets
   "afl",
   "test-vendored",
+  # Exclude phoenix for CI.
+  "phoenix",
 ]
 
 [lib]
@@ -44,12 +46,12 @@ bench = false
 default = ["prost-derive", "std"]
 no-recursion-limit = []
 std = []
-mrpc-frontend = ["dep:mrpc"]
+mrpc-frontend = ["dep:shm"]
 
 [dependencies]
 bytes = { version = "1", default-features = false }
 prost-derive = { version = "0.10.0", path = "prost-derive", optional = true }
-mrpc = { path = "phoenix/src/mrpc", optional = true }
+shm = { path = "phoenix/src/shm", features = ["mrpc"], optional = true }
 
 [dev-dependencies]
 criterion = "0.3"
